syntax="proto2";
package Proto.Storage;

enum LogType {
    LOG_Type_empty = 0;
    LOG_Type_logdata = 1;
    LOG_Type_start_working = 2;
    LOG_Type_member_change = 3;
    LOG_Type_raw_data = 4;
};

message LogEntry {
    required uint32 action = 1;// 2--change, 3--delete
    required string key = 2;
    required string value = 3;
}

message ValueData {
    optional uint64 value_id = 1;//数据id, 表示DataContent的唯一性,使用proposal_id
    required LogType data_type = 2;//0--没有数据,  1--log_entry数据, 2--start working, 3--成员变更, 4--raw data
    oneof DataContent {
        string start_work = 3;
        string member_change = 4;
        string raw_data = 5;
    }
    repeated LogEntry log_entry = 6; //LogEntry
}

message Log {
    required uint64 log_index = 1;
    required uint64 max_proposal_id = 2; //MaxN
    required uint64 proposal_id = 3; //AcceptN
    optional ValueData value_data = 4; //valueN AcceptV
}